@@ -13,6 +13,8 @@ What's new
 Other features
 ~~~~~~~~~~~~~~
 
+ * Added multi-select form field to the form builder (dwasyl)
+
 Bug fixes
 ~~~~~~~~~
 
